test GH using jsonc

--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        run: echo ${{ env.myname }}
+        run: "echo ${{ env.myname }}"
