test GH using jsonc

--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -11,4 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        run: "echo ${{ env.myname }}"
+        uses: actions/checkout@v2
+
+      - name: testing
+        run: "echo ${{ vars.myname }}"
