--- a/.github/workflows/config.jsonc
+++ b/.github/workflows/config.jsonc
@@ -1,5 +1,13 @@
 {
     "hello": {
-       "myname" : "srikanth" 
+       "myname" : "srikanth" ,
+       "myname1" : "srikanth1", 
+       "myname2" : "srikanth2" ,
+       "myname3" : "srikanth3" ,
+       "myname4" : "srikanth4" ,
+       "myname5" : "srikanth5" ,
+       "myname6" : "srikanth6" ,
+       "RUNNER" : ["my-hello-runner"] 
+
     }
 }
