--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -78,8 +78,5 @@ jobs:
     - name: Read mapping file
       id: read_mapping
       run: |
-        echo "myname=$(jq -r '.myname' ${{ env.mapping-file }})" >> $GITHUB_ENV
-        echo "myname1=$(jq -r '.myname1' ${{ env.mapping-file }})" >> $GITHUB_ENV
-        echo "myname2=$(jq -r '.myname2' ${{ env.mapping-file }})" >> $GITHUB_ENV
-        echo $myname $myname1 $myname2
-
+        $mapping = Get-Content -Path ${{ env.mapping-file }} -Raw | ConvertFrom-Json -AsHashTable
+        echo $mapping
