--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -98,5 +98,5 @@ jobs:
         } else {
           $resultObject = [PSCustomObject]$result
           echo  "myname=$($resultObject.myname)"
-          
+          echo  "myname2=$($resultObject.myname2)"
           }
